assets/css/style.css
/* ... */
.container-medium {
  max-width: 920px;
  padding-left: 30px;
  padding-right: 30px;
}

.style-guide-label {
  color: var(--orange);
  margin-bottom: 10px;
  line-height: 1.4em;
}

.typography-container {
  margin-bottom: 60px;
}

.section-title .section-subtitle {
  color: #343334;
}

.color-container {
  border: 1px solid #fff;
  width: 100%;
  height: 180px;
}

.color-container.orange {
  background-color: var(--orange);
}

.color-container.green {
  background-color: var(--green);
}

.color-container.white {
  background-color: var(--white);
}

.color-container.gray {
  background-color: var(--gray);
}

.color-container.black {
  background-color: var(--black);
}

.color-container.dark-gray {
  background-color: var(--dark-gray);
}

.color-container.soft-gray {
  background-color: var(--soft-gray);
}

.colors-grid {
  grid-template-rows: auto auto auto;
  grid-template-columns: 1fr 1fr 1fr;
}

.footer-links-wrap {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  justify-content: center;
  align-items: flex-start;
  margin-bottom: 40px;
  display: flex;
}

.footer-link {
  color: var(--gray);
  font-size: 16px;
  transition: color .2s ease-in-out;
}

.footer-link:hover {
  color: var(--orange);
}

.tools-sections-wrap {
  flex-flow: column;
  display: flex;
}

.experience-sections-wrap {
  flex-flow: column;
  width: 100%;
  display: flex;
}

.paragraph {
  margin-bottom: 1.5rem;
}

@media screen and (min-width: 1440px) {
  h1 {
    font-size: 110px;
  }

  h5, h6 {
    color: var(--white);
  }

  ul {
    margin-bottom: 0;
  }

  blockquote {
    color: var(--white);
  }

  .sticky-profile-card {
    margin-right: 80px;
  }

  .hero-number {
    font-weight: 600;
  }

  .hero-skills-card {
    width: 100%;
  }

  .hero-skills-card-heading {
    font-weight: 500;
  }

  .fire-circle-illustration {
    top: 346px;
  }

  .rich-text a {
    text-decoration: none;
  }

  .rich-text a:hover {
    text-decoration: underline;
  }

  .changelog-content-wrap {
    grid-column-gap: 20px;
    grid-row-gap: 20px;
    flex-flow: column;
    display: flex;
  }
}

@media screen and (max-width: 991px) {
  h1 {
    font-size: 86px;
  }

  h2 {
    font-size: 74px;
  }

  h3 {
    font-size: 28px;
  }

  h4 {
    font-size: 26px;
  }

  h5 {
    font-size: 24px;
  }

  h6 {
    font-size: 22px;
  }

  p {
    font-size: 16px;
  }

  .main {
    padding-top: 60px;
  }

  .container-large {
    flex-flow: column;
    padding-left: 30px;
    padding-right: 30px;
  }

  .container-large.center {
    justify-content: flex-start;
    align-items: center;
  }

  .container-large.reversed-direction {
    flex-flow: column-reverse;
  }

  .sticky-profile-card {
    max-width: 100%;
    margin-bottom: 40px;
    margin-right: 0;
    position: relative;
    top: 0;
  }

  .profile-name, .profile-bio {
    margin-bottom: 24px;
  }

  .hero-heading {
    text-align: center;
  }

  .hero-section {
    justify-content: flex-start;
    align-items: center;
  }

  .hero-number {
    font-size: 60px;
  }

  .paragraph {
    text-align: left;
  }

  .section {
    padding-top: 90px;
  }

  .section-title {
    text-align: center;
  }

  .tools-collection-list {
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
  }

  .line-illustration {
    top: -38px;
    left: 170px;
  }

  .fire-circle-illustration {
    left: -80px;
  }

  .blog-post-content {
    margin-top: 40px;
  }

  .rich-text h1 {
    font-size: 44px;
  }

  .rich-text h2 {
    font-size: 28px;
  }

  .sm-heading-1 {
    font-size: 46px;
  }

  .blog-sections-wrap {
    margin-bottom: 80px;
  }

  .tool-post-heading-wrap {
    margin-bottom: 40px;
  }

  .project-sections-wrap {
    margin-bottom: 70px;
  }

  .project-post-content, .experience-post-content {
    margin-top: 40px;
  }

  .password-section {
    padding-left: 30px;
    padding-right: 30px;
  }

  .sm-heading-2 {
    font-size: 38px;
  }

  .main-wrapper {
    flex-flow: column;
  }

  .main-wrapper.reverse-direction {
    flex-flow: column-reverse;
  }

  .licenses-section {
    grid-column-gap: 60px;
    grid-row-gap: 60px;
  }

  .tools-sections-wrap, .experience-sections-wrap {
    margin-bottom: 80px;
  }
}
/* ... */

